fix(Section): Fix ie11 scrollbar bug on Section components

--- a/react/Section/Section.less
+++ b/react/Section/Section.less
@@ -4,6 +4,7 @@
 
 .root {
   overflow-x: hidden;
+  -ms-overflow-style: -ms-autohiding-scrollbar;
   padding: (@grid-row-height * 2) @grid-gutter-width;
   @media only screen and (min-width: (@grid-container-width + (@grid-gutter-width * 2))) {
     padding-left: (@grid-gutter-width * 1.5);
